# tarot-woman

./: Cargo.toml  README.md
src/: cards.rs  main.rs
src/cards/: major_arcana.rs  minor_arcana.rs
