[package]
name = "tarot-woman"
version = "0.1.0"
edition = "2021"
description = "An app for drawing tarot cards."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.0", features = ["small_rng"] }
